apps/production/cert-practice/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-practice-backend
  namespace: default
  labels:
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/component: backend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-practice
      app.kubernetes.io/instance: cert-practice
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-practice
        app.kubernetes.io/instance: cert-practice
        app.kubernetes.io/component: backend
    spec:
      serviceAccountName: cert-practice
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: backend
          image: "ghcr.io/arjansiemons/cert-practice-backend:1.11.0" # {"$imagepolicy": "flux-system:cert-practice-backend"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "110Mi"
              cpu: "15m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
