apps/production/cert-practice/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-practice-frontend
  namespace: default
  labels:
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/component: frontend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-practice
      app.kubernetes.io/instance: cert-practice
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-practice
        app.kubernetes.io/instance: cert-practice
        app.kubernetes.io/component: frontend
    spec:
      serviceAccountName: cert-practice
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      containers:
        - name: frontend
          image: "ghcr.io/arjansiemons/cert-practice-frontend:1.11.0" # {"$imagepolicy": "flux-system:cert-practice-frontend"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "100Mi"
              cpu: "15m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
