apps/production/cert-practice/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-practice-backend
  namespace: default
  labels:
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/component: backend
