apps/production/cert-practice/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-practice-frontend
  namespace: default
  labels:
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cert-practice
    app.kubernetes.io/instance: cert-practice
    app.kubernetes.io/component: frontend
